Fri Nov 21 13:26:22 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * *Makefile*:
          Udpated dependencies for all Makefiles normally built.

        * include/makeinclude/macros.GNU:
        * include/makeinclude/rules.common.GNU:
          Added cleanup_idl_stubs.  It was already there as a .local
          target, now it can be called directly.  This allows you to
          cleanup the idl stub code for a particular project without
          having to run realclean which will cleanup all everything in the
          directory.

Fri Nov 21 07:24:07 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * bin/auto_run_tests.pl:
          Moved the declaration of $config_list to before the if(!getopt
          line, since it's used there if the if is satisfied.  Removed the
          ":" after a in the getopt argument list, since -a does not take
          a manditory argument (which is what ":" means).  This has
          prevented any tests from running in the ACE only autobuilds.
          since September.

Fri Nov 21 02:57:35 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        This is a major reorganization of the make system, and was
        motivated by intermittent build errors in the autobuilds as well
        as the pending move to MPC.  Sorry if it's a little long, it's in
        a quasi Irfan-Bala style...
        
        Specific changes are noted below, but here's a basic overview:
        
        clean: Cleans up only the objects actually created by the
          current project.  If multiple makefiles exist in the same
          directory, they no longer need to be completely rebuilt because
          another makefile issued a clean.  This will help in large
          directories like $(ACE_ROOT)tests or
          $(TAO_ROOT)/orbsvcs/orbsvcs.  These objects are cleaned up even
          if a particular feature is not enabled, e.g., rmcast, ssl,
          Other, etc., and is not dependant on bin/ace_components or the