@@ -1775,6 +1775,7 @@ David Faure <faure@kde.org>
 Ted Mules <ned@technisyst.com.au>
 Mike Hepburn <mike@anvil.com>
 Dale Wilson  <wilson_d@ociweb.com>
+Thomas Girard <thomas.g.girard@free.fr>
  
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
